--- a/NotificationScheduling.Web/ClientApp/src/styles.css
+++ b/NotificationScheduling.Web/ClientApp/src/styles.css
@@ -15,7 +15,9 @@ code {
   border-color: #1861ac;
 }
 
-.goal {
+/*PROGRESS_BAR*/
+
+.one {
   position: absolute;
   margin-top: -10px;
   z-index: 1;
@@ -24,17 +26,6 @@ code {
   border-radius: 25px;
 }
 
-.one {
-  left: 25%;
-}
-
-.two {
-  left: 50%;
-}
-
-.three {
-  left: 75%;
-}
 
 .primary-color {
   background-color: #4989bd;
@@ -42,20 +33,4 @@ code {
 
 .success-color {
   background-color: #5cb85c;
-}
-
-.danger-color {
-  background-color: #d9534f;
-}
-
-.warning-color {
-  background-color: #f0ad4e;
-}
-
-.info-color {
-  background-color: #5bc0de;
-}
-
-.no-color {
-  background-color: inherit;
 }
